style.css
html {
  background-color: #ffefe9;
}
body {
  color: #000;
  background-color: #fff;
  margin: 0px auto; 
  width: 280px;
  text-align: center;
  font-family: Arial, Helvetica, sans-serif;
  border-radius: 10px;
  margin-top: 40px;
  padding: 25px;
  box-shadow: 2px 2px 6px 1px rgba(0,0,0,0.18);
  overflow: hidden;
  overflow-wrap: break-word;
}

h1 {
  font-size: 3.5em;
  color: #ff926a;
  font-weight: 900;
  margin: 0px;
  margin-bottom: 10px;
}

#calc {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

#display {
  height: 80px;
  padding: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2.2em;
  font-weight: 600;
  overflow-wrap: anywhere;
  overflow: break-word;
}

#buttons {
  display: flex;
  gap: 10px;
  justify-content: space-between;
}

#numbers, #operators {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

#numbers {
  flex: 2;
  justify-content: flex-start;
}

#numbers button {
  width: 50px;
  height: 50px;
  background-color: #ffefe9;
  border: none;
  border-radius: 30px;
}

#numbers button:hover {
  background-color: #ffa483;
  box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.18);
}

#operators {
  flex: 1;
  justify-content: flex-end;
}

#operators button {
  width: 40px;
  height: 85px;
  border-radius: 30px;
  background-color: #ffcab6;
  border: none;
}

#operators #equals {
  width: 100%;
  height: 40px;
}

#operators button:hover {
  box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.18);
  background-color: #ffa483;
}

#operators .active {
  background-color: #F2794C;
}

#operators .active:hover {
  background-color: #F2794C;
  box-shadow: none;
}

#mainOps {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  justify-content: space-between;
}



@media only screen and (max-width: 600px) {
  html {
    background-color: #fff;
  }
  body {
    border: none;
    box-shadow: none;
  }

  #numbers button {
    box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.18);
  }
  #numbers button:hover {
    background-color: #ffefe9;
  }

  #numbers button:active {
    background-color: #ffa483;
  }
  
  #operators button {
    box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.18);
  }
  
  #operators button:hover {
    background-color: #ffcab6;
  }
  
  #operators button:active {
    background-color: #ffa483;
  }

  #operators .active {
    box-shadow: none;
  }

}

